[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["tls", "json"] }
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["tera"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["diesel_postgres_pool"] }
